# petunia

./: AGENTS.md  Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  main.rs  theme.rs
src/data/: contact.rs  message.rs  mod.rs  thread.rs
src/pane/: chat.rs  mod.rs
src/screen/: linking.rs  main.rs  mod.rs
src/signal/: command.rs  event.rs  mod.rs  status.rs  store.rs  subscription.rs  worker.rs
src/widget/: avatar.rs  message_view.rs  mod.rs  qr.rs  sidebar.rs
