[package]
name = "petunia"
version = "0.1.0"
edition = "2024"

[dependencies]
presage = { git = "https://github.com/whisperfish/presage", rev = "63482efd0cbdc0780baf0650517c7d55f1cac05d" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", rev = "63482efd0cbdc0780baf0650517c7d55f1cac05d" }
iced = { version = "0.14", features = ["tokio", "canvas", "image", "advanced"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }
futures = "0.3"
qrcode = "0.14"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", default-features = false, features = ["sqlite", "runtime-tokio"] }
dirs = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
